Add ag grid example table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,10 @@
         <mat-icon>calendar_today</mat-icon>
         Prediction
       </a>
-
+      <a mat-list-item routerLink="/table">
+        <mat-icon>calendar_today</mat-icon>
+        Table example
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class='no-bg'>
