Add pagination to table

--- a/src/app/components/common/table/table.component.html
+++ b/src/app/components/common/table/table.component.html
@@ -11,5 +11,6 @@
     (gridReady)="gridReady()"
     [getRowHeight]="getRowHeight"
     (rowDoubleClicked)="dblClickHandler($event)"
+    [pagination]="true"
 >
 </ag-grid-angular>
